[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main/ui/LoaderCover/LoaderCover.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/default_theme.theme" type="Theme" id=3]
[ext_resource path="res://src/main/ui/LoaderCover/DotOrigin.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "dot_rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/DotControl/DotOrigin:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, -450.0 ]
}

[node name="LoaderCover" type="Control"]
modulate = Color( 0.68, 0.85, 0.9, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dark" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerTimeout" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 176.0

[node name="DotControl" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 76, 55.5 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DotOrigin" type="Node2D" parent="MarginContainer/VBoxContainer/DotControl"]
position = Vector2( 76, 55.5 )
rotation = -1.5708
script = ExtResource( 4 )

[node name="DotSprite" type="Sprite" parent="MarginContainer/VBoxContainer/DotControl/DotOrigin"]
position = Vector2( 50, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 152.0
margin_bottom = 152.0
align = 1
valign = 1
autowrap = true

[node name="TweenSmooth" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dot_rotate = SubResource( 1 )

[connection signal="timeout" from="TimerTimeout" to="." method="_on_TimerTimeout_timeout"]
